Upgrade to Log4J 2; add ability to execute JavaFX from Maven